change package name

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.fahmisbas.simplify">
+    package="com.revelatestudio.simplify">
 
     <application
         android:allowBackup="true"
@@ -9,11 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.EditNoteActivity"></activity>
+        <activity android:name="com.revelatestudio.simplify.activities.EditNoteActivity">
+
+        </activity>
         <activity
-            android:name=".activities.SettingsActivity"
+            android:name="com.revelatestudio.simplify.activities.SettingsActivity"
             android:label="@string/title_activity_settings" />
-        <activity android:name=".activities.MainActivity">
+        <activity android:name="com.revelatestudio.simplify.activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
